grammer.txt
program ::= (function_decl | struct_decl | var_decl)* EOF

type_spec ::= ( ('int' | 'float' | 'double' | 'char' | 'void') 
              | 'struct' IDENT 
              ) ('*')*

struct_decl ::= 'struct' IDENT '{' (type_spec IDENT ';')* '}' ';'

var_decl ::= type_spec IDENT ('[' expr ']')* ('=' initializer)? ';'

function_decl ::= type_spec IDENT '(' param_list? ')' (block | ';')

param_list ::= param (',' param)*

param ::= type_spec IDENT ('[' expr? ']')*

initializer ::= expr | '{' (expr (',' expr)*)? '}'

block ::= '{' statement* '}'

statement ::= matched_stmt | unmatched_stmt

matched_stmt ::= if_stmt_matched | while_stmt | for_stmt | return_stmt 
               | break_stmt | continue_stmt | expr_stmt | block | var_decl
unmatched_stmt ::= if_stmt_unmatched

if_stmt_matched ::= 'if' '(' expr ')' matched_stmt 'else' matched_stmt

if_stmt_unmatched ::= 'if' '(' expr ')' statement
                    | 'if' '(' expr ')' matched_stmt 'else' unmatched_stmt

while_stmt ::= 'while' '(' expr ')' matched_stmt

for_stmt ::= 'for' '(' expr? ';' expr? ';' expr? ')' matched_stmt

return_stmt ::= 'return' expr? ';'

break_stmt ::= 'break' ';'

continue_stmt ::= 'continue' ';'

expr_stmt ::= expr? ';'

expr ::= assignment

assignment ::= logical_or ( ('=' | '+=' | '-=' | '*=' | '/=') assignment )?

logical_or ::= logical_and ('||' logical_and)*

logical_and ::= equality ('&&' equality)*

equality ::= relational (('==' | '!=') relational)*

relational ::= additive (('<' | '<=' | '>' | '>=') additive)*

additive ::= multiplicative (('+' | '-') multiplicative)*

multiplicative ::= unary (('*' | '/' | '%') unary)*

unary ::= ('+' | '-' | '*' | '&' | '!' | '++' | '--') unary
        | postfix

postfix ::= primary ( '[' expr ']' 
                    | '.' IDENT 
                    | '->' IDENT
                    | '(' arg_list? ')'
                    | '++'
                    | '--'
                    )*

primary ::= INT_LIT | FLOAT_LIT | STRING_LIT | CHAR_LIT
          | IDENT
          | '(' expr ')'

arg_list ::= expr (',' expr)*
